--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,14 @@ version = "0.1.0"
 description = "Confidence engine for beginner Vibe Coders"
 requires-python = ">=3.11"
 
+[project.scripts]
+code-audit = "code_audit.__main__:main"
+
 [tool.setuptools]
 py-modules = []
+
+[tool.setuptools.packages.find]
+where = ["src"]
 
 [project.optional-dependencies]
 dev = [
@@ -60,5 +66,5 @@ norecursedirs = [
   "__pycache__",
 ]
 
-# Make imports predictable — update to ["src"] once src/ layout exists
-pythonpath = ["."]
+# Make imports predictable — src layout
+pythonpath = [".", "src"]
