feat(rules): add migration script, detector, and CI workflow for rule registry\n\n- scripts/migrate_rule_ids_to_public.py: one-time migration that copies\n  docs/rule_registry.json supported_rule_ids into PUBLIC_RULE_IDS in\n  rules.py (dry-run by default, --write to mutate, --force to overwrite)\n- scripts/needs_rule_registry_migration.py: detects pre-bucket state\n  (PUBLIC empty + docs has IDs), exits 0 = no migration, 1 = required\n- .github/workflows/rule-registry-sync.yml: runs migration detector\n  then sync check; CI is read-only, fails with remediation commands\n\nBoth scripts handle variable references (DC_UNREACHABLE_001) and\nquoted strings (\"DC_UNREACHABLE_001\") in the PUBLIC_RULE_IDS block.

--- a/.github/workflows/rule-registry-sync.yml
+++ b/.github/workflows/rule-registry-sync.yml
@@ -6,12 +6,16 @@ on:
     branches: [main]
 
 jobs:
-  check-sync:
+  rule-registry-sync:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
           python-version: "3.13"
-      - name: Check rule_registry.json matches rules.py
+
+      - name: Detect rule registry migration requirement
+        run: python scripts/needs_rule_registry_migration.py
+
+      - name: Check rule registry is in sync
         run: python scripts/sync_rule_registry.py
