feat(contracts): add rule registry schema validator and ids-only contract gate
- scripts/validate_rule_registry.py: validates docs/rule_registry.json
  against schemas/rule_registry.schema.json (dependency-free for CI)
- tests/test_rule_registry_requires_signal_logic_bump.py: contract gate
  requiring signal_logic_version bump when supported_rule_ids change
  (uses ids-only hash — ignores formatting/metadata changes)
- scripts/refresh_rule_registry_manifest.py: generates manifest with
  canonical hash of normalized supported_rule_ids array
- tests/contracts/rule_registry_manifest.json: initial manifest
- .github/workflows/rule-registry-sync.yml: adds schema validation step

640 passed, 2 skipped, 0 failed.

--- a/.github/workflows/rule-registry-sync.yml
+++ b/.github/workflows/rule-registry-sync.yml
@@ -19,3 +19,6 @@ jobs:
 
       - name: Check rule registry is in sync
         run: python scripts/sync_rule_registry.py
+
+      - name: Validate rule registry structure (schema)
+        run: python scripts/validate_rule_registry.py
