--- a/.github/workflows/rule-registry-sync.yml
+++ b/.github/workflows/rule-registry-sync.yml
@@ -22,3 +22,8 @@ jobs:
 
       - name: Validate rule registry structure (schema)
         run: python scripts/validate_rule_registry.py
+
+      - name: Enforce PUBLIC_RULE_IDS ↔ registry contract gate
+        run: |
+          python -m pip install -e .
+          python -m pytest -k public_rule_registry_manifest -q
