contract: dependency-closure hashing for confidence policy gate
Replaces static CONFIDENCE_FILES list with recursive import-closure
resolution starting from confidence scoring entrypoint(s).

Changes:
- tests/test_confidence_policy_requires_signal_logic_bump.py: rewrote with
  _closure() BFS over internal code_audit.* imports, _entrypoints() with
  CONFIDENCE_ENTRYPOINTS env override, deterministic sorted traversal
- scripts/refresh_confidence_policy_manifest.py: matching closure resolver,
  manifest now records discovery mode + closure paths
- .github/workflows/pytest.yml: pin CONFIDENCE_ENTRYPOINTS env var
- docs/CONTRACT.md: added §11 Confidence Policy Contract documentation
- tests/contracts/confidence_policy_manifest.json: refreshed with 3-file
  closure (confidence.py → model/__init__.py, model/finding.py)

642 passed, 2 skipped

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -12,6 +12,10 @@ jobs:
   test:
     name: Run pytest (Python ${{ matrix.python-version }})
     runs-on: ubuntu-latest
+    env:
+      # Pin confidence policy hashing entrypoints (dependency-closure starts here).
+      # Comma-separated repo-relative paths. Add more if confidence scoring moves/splits.
+      CONFIDENCE_ENTRYPOINTS: src/code_audit/insights/confidence.py
 
     strategy:
       fail-fast: false
